--- a/cl-webc/src/main/webapp/css/elements.css
+++ b/cl-webc/src/main/webapp/css/elements.css
@@ -13,9 +13,11 @@ body {
 	margin: 0px;
 	border: 0px;
 	padding: 0px;
+	/*
 	font-size: 12px;
 	font-family: Helvetica;
 	font-variant: normal;
+	*/
 	height:100%;
 	//background: #ffffff;
 }
@@ -104,7 +106,7 @@ input.date {
 }
 
 label {
-	font-weight:bold;
+	/*font-weight:bold;*/
 }
 
 table {
